# grounding-with-bing-search

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
server/: .env.sample  Dockerfile  controller.py  pyproject.toml  startup.py
server/services/: assistant_manager_service.py
server/tools/knowledge/: bing_grounding_tool.py
